# Biomimeta

./: CITATIONS.md  COPYRIGHT.txt  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  lib.rs  move.rs.files.sh  move_afiyah_dirs.sh  scaffold.rs  scaffold.sh
afiyah/configs/: device_profiles.rs
afiyah/cortical_processing/: cortical_feedback_loops.rs
afiyah/experimental_features/: quantum_visual_processing.rs  (+1 more)
bitstream_formatting/: mod.rs
configs/: biological_default.rs  experimental_flags.rs
cortical_processing/: mod.rs  temporal_integration.rs
entropy_coding/: mod.rs
examples/: advanced_cortical_areas.rs  basic_compression.rs
experimental_features/: cross_species_models.rs  mod.rs  neuromorphic_acceleration.rs
hardware_acceleration/: gpu_acceleration.rs  mod.rs  neuromorphic_interfaces.rs  simd_optimization.rs
medical_applications/: clinical_validation.rs  diagnostic_tools.rs  mod.rs
motion_estimation/: mod.rs
multi_modal_integration/: cross_modal_attention.rs  mod.rs
perceptual_optimization/: masking_algorithms.rs  mod.rs  perceptual_error_model.rs  quality_metrics.rs  temporal_prediction_networks.rs
performance_optimization/: benchmarking.rs  memory_optimization.rs  mod.rs  profiling.rs  real_time_processing.rs  simd_optimization.rs
quality_metrics/: mod.rs
quantization/: mod.rs
real_time_adaptation/: mod.rs  performance_monitor.rs  viewer_behavior_tracker.rs
src/: lib.rs
streaming_engine/: cdn_integration.rs  frame_scheduler.rs  intelligent_load_balancing.rs  mod.rs
synaptic_adaptation/: habituation_response.rs  hebbian_learning.rs  homeostatic_plasticity.rs  mod.rs  neuromodulation.rs
tests/: integration_tests.rs
transform_coding/: mod.rs
utilities/: data_loader.rs  logging.rs  visualization.rs
(+63 files in other folders)
