[package]
name = "afiyah"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-BRPL-1.0"
description = "Biomimetic Video Compression & Streaming Engine"
repository = "https://example.com/biomimeta/afiyah"

[lib]
name = "afiyah"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

