[package]
name = "afiyah"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-BRPL-1.0"
description = "Biomimetic Video Compression & Streaming Engine"
repository = "https://example.com/biomimeta/afiyah"
authors = ["Neo Qiss <research@biomimeta.com>"]
keywords = ["video", "compression", "biomimetic", "neuroscience", "streaming"]
categories = ["multimedia", "science", "algorithms"]

[lib]
name = "afiyah"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
num-traits = "0.2"
ndarray = "0.15"
rayon = "1.8"
crossbeam = "0.8"
dashmap = "5.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
criterion = "0.5"
proptest = "1.0"
tempfile = "3.8"

[[example]]
name = "basic_compression"
path = "examples/basic_compression.rs"

[[example]]
name = "advanced_cortical_areas"
path = "examples/advanced_cortical_areas.rs"

# [[bench]]
# name = "compression_benchmark"
# harness = false

[features]
default = ["std"]
std = []
gpu-acceleration = []
simd = []
bio-validation = []
debug-neurons = []
visualization = []
experimental = []

